// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuthForm AuthForm view 1`] = `
<div
  className="overlay"
>
  <div
    className="item"
  >
    <p>
      To use the Search Party tool, you must be logged in to USCIS.
    </p>
    <p>
      <a
        className="usa-button usa-button--primary"
        href="#test-link"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user-circle fa-w-16 "
          data-icon="user-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
          Log In to USCIS
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots CaseAgeFilter Empty case list 1`] = `
Array [
  <label
    className="usa-label"
    htmlFor="caseCreationFilterToggle"
  >
    Case Creation Range
  </label>,
  <span>
    <span
      onClick={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="trigger"
      >
        <button
          className="usa-button"
          disabled={false}
          id="caseCreationFilterToggle"
          onClick={[Function]}
          type="button"
        >
          1/1/2014
           - 
          12/4/2019
        </button>
      </div>
    </span>
  </span>,
]
`;

exports[`Storyshots CaseList Case list while loading data 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots CaseList Case list with some data 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots CaseList Caselist with more cases to load 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots CaseList Empty case list 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots DetailNoteDisplay General comment 1`] = `"This is a general comment."`;

exports[`Storyshots DetailNoteDisplay Trouble ticket 1`] = `
Array [
  "ServiceNow ticket",
  " ",
  <a
    href="http://localhost:1111/12345"
  >
    12345
  </a>,
  " was associated with this case.",
]
`;

exports[`Storyshots FormattedDate Last Refresh 1`] = `
<span
  className="formatted-date"
>
  Last Refresh
  : 
  8/11/2014, 12:00:00 AM
</span>
`;

exports[`Storyshots I90Table Active case view 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <td
        className="min"
      >
        
      </td>
      <td>
        Receipt Number
      </td>
      <td>
        Case Creation
      </td>
      <td>
        Application Reason
      </td>
      <td>
        Case Status
      </td>
      <td>
        Case Substatus
      </td>
      <td>
        Platform
      </td>
      <td>
        Problem
      </td>
      <td>
        Due Date
      </td>
      <td>
        SN Ticket
      </td>
      <td>
        Actions
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          aria-label="Toggle details for FKE5381523"
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        8/6/2019
        <br />
        (
        101 days
        )
      </td>
      <td>
        Boredom
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td>
        
      </td>
      <td />
      <td />
      <td>
        <div
          className="remove-button-margin"
        >
          <button
            className="usa-button usa-button--outline"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Triage
          </button>
        </div>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          aria-label="Toggle details for FKE8206743"
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        6/17/2019
        <br />
        (
        151 days
        )
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        Eschewing Obfuscation
      </td>
      <td>
        Amazingly Successful
      </td>
      <td>
        SP
      </td>
      <td>
        Technical Issue
      </td>
      <td>
        7/30/2020
      </td>
      <td>
        <a
          href="http://www.example.com/1234"
          rel="noopener noreferrer"
          target="_blank"
        >
          1234
        </a>
        <br />
      </td>
      <td>
        <div
          className="remove-button-margin"
        >
          <button
            className="usa-button usa-button--outline"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Triage
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots I90Table Empty Table - Active 1`] = `null`;

exports[`Storyshots I90Table Empty Table - Snoozed 1`] = `null`;

exports[`Storyshots I90Table Empty Table - With Filter On 1`] = `null`;

exports[`Storyshots I90Table Snoozed case view 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <td
        className="min"
      >
        
      </td>
      <td>
        Receipt Number
      </td>
      <td>
        Case Creation
      </td>
      <td>
        Application Reason
      </td>
      <td>
        Case Status
      </td>
      <td>
        Case Substatus
      </td>
      <td>
        Platform
      </td>
      <td>
        Problem
      </td>
      <td>
        Due Date
      </td>
      <td>
        SN Ticket
      </td>
      <td>
        Actions
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          aria-label="Toggle details for FKE5381523"
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        8/6/2019
        <br />
        (
        101 days
        )
      </td>
      <td>
        Boredom
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td>
        
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
        <div
          className="remove-button-margin"
        >
          <button
            className="usa-button usa-button--secondary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Resolve
          </button>
        </div>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          aria-label="Toggle details for FKE8206743"
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        6/17/2019
        <br />
        (
        151 days
        )
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        Eschewing Obfuscation
      </td>
      <td>
        Amazingly Successful
      </td>
      <td>
        SP
      </td>
      <td>
        Technical Issue
      </td>
      <td>
        7/30/2020
      </td>
      <td>
        <a
          href="http://www.example.com/1234"
          rel="noopener noreferrer"
          target="_blank"
        >
          1234
        </a>
        <br />
      </td>
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
        <div
          className="remove-button-margin"
        >
          <button
            className="usa-button usa-button--secondary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Resolve
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots LoadMore more cases 1`] = `
<div
  className="display-flex flex-column flex-align-center"
>
  <button
    className="usa-button usa-button--outline"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Show More
  </button>
</div>
`;

exports[`Storyshots LoadMore more cases loading 1`] = `
<div
  className="display-flex flex-column flex-align-center"
>
  <button
    className="usa-button usa-button--outline"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Loading...
  </button>
</div>
`;

exports[`Storyshots LoadMore no more cases 1`] = `null`;

exports[`Storyshots SnoozeForm Basic re-snooze form 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="snoozeReason"
  >
    Problem
  </label>
  <select
    className="usa-select"
    id="snoozeReason"
    name="snoozeReason"
    onChange={[Function]}
    required={true}
    value="3"
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Reason -
    </option>
    <option
      value="0"
    >
      Technical Issue
    </option>
    <option
      value="1"
    >
      Test Data - should be deleted
    </option>
    <option
      value="2"
    >
      Needs record analysis to review
    </option>
    <option
      value="3"
    >
      Stuck at field office - awaiting response
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="followUp"
  >
    ServiceNow ticket ID
  </label>
  <input
    className="usa-input"
    id="followUp"
    name="followUp"
    onChange={[Function]}
    type="text"
    value="ABC123"
  />
  <label
    className="usa-label"
    htmlFor="duration"
  >
    Due in (days)
  </label>
  <input
    className="usa-input"
    id="duration"
    max={365}
    min={1}
    name="duration"
    onChange={[Function]}
    type="number"
    value={5}
  />
  <div>
    <button
      className="usa-button usa-button--outline"
      disabled={false}
      id="showNoteField"
      onClick={[Function]}
      type="button"
    >
      Add a note
    </button>
  </div>
  <button
    className="usa-button"
    disabled={false}
    id="SnoozeSumbit"
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots SnoozeForm Basic snooze form 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="snoozeReason"
  >
    Problem
  </label>
  <select
    className="usa-select"
    id="snoozeReason"
    name="snoozeReason"
    onChange={[Function]}
    required={true}
    value="0"
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Reason -
    </option>
    <option
      value="0"
    >
      Technical Issue
    </option>
    <option
      value="1"
    >
      Test Data - should be deleted
    </option>
    <option
      value="2"
    >
      Needs record analysis to review
    </option>
    <option
      value="3"
    >
      Stuck at field office - awaiting response
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="technicalSubtype"
  >
    Specific Issue
  </label>
  <select
    className="usa-select"
    id="technicalSubtype"
    name="technicalSubtype"
    onChange={[Function]}
    required={true}
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Specific Issue -
    </option>
    <option
      value="0"
    >
      Cannot refresh TECS Check
    </option>
    <option
      value="1"
    >
      Undo referral
    </option>
    <option
      value="2"
    >
      Unable to Update DOB
    </option>
    <option
      value="3"
    >
      Unable to update address
    </option>
    <option
      value="4"
    >
      Unable to assign/un-assign
    </option>
    <option
      value="5"
    >
      Card Production Error
    </option>
    <option
      value="6"
    >
      Case stuck in current state, and needs to be pushed to next phase
    </option>
    <option
      value="7"
    >
      Needs to be Closed
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="followUp"
  >
    ServiceNow ticket ID
  </label>
  <input
    className="usa-input"
    id="followUp"
    name="followUp"
    onChange={[Function]}
    type="text"
    value=""
  />
  <label
    className="usa-label"
    htmlFor="duration"
  >
    Due in (days)
  </label>
  <input
    className="usa-input"
    id="duration"
    max={365}
    min={1}
    name="duration"
    onChange={[Function]}
    type="number"
    value={14}
  />
  <div>
    <button
      className="usa-button usa-button--outline"
      disabled={false}
      id="showNoteField"
      onClick={[Function]}
      type="button"
    >
      Add a note
    </button>
  </div>
  <button
    className="usa-button"
    disabled={false}
    id="SnoozeSumbit"
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert usa-alert--success usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Success status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert error 1`] = `
<div
  className="usa-alert usa-alert--error usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Error status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Informative status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert usa-alert--warning usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Warning status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className="usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;

exports[`Storyshots UsaSelect Select 1`] = `
<select
  className="usa-select"
  id="name"
  name="name"
  onChange={[Function]}
  required={true}
  value="0"
>
  <option
    disabled={true}
    hidden={true}
    value=""
  >
    placeholder
  </option>
  <option
    value="0"
  >
    x
  </option>
  <option
    value="1"
  >
    y
  </option>
  <option
    value="2"
  >
    z
  </option>
</select>
`;

exports[`Storyshots Well no content 1`] = `
<div
  className="well"
/>
`;

exports[`Storyshots Well with text 1`] = `
<div
  className="well"
>
  Hi I'm a well
</div>
`;
